# casts_down

./: .gitignore  ASCII_CHANGELOG.md  BUILD.md  LIMITATIONS.md  Makefile  README.md  RELEASE_NOTES.md  TEST_RESULTS.md  XIAOYUZHOU_GUIDE.md  build_exe.py  casts_down.py  podcast_dl.py  pyproject.toml  requirements.txt  setup.py  test_example.sh  xiaoyuzhou_dl.py  xiaoyuzhou_technical_report.md
.github/workflows/: build.yml
casts_down/: __init__.py  cli.py
casts_down/downloaders/: __init__.py  base.py  podcast.py  xiaoyuzhou.py
casts_down/transcribe/: __init__.py  engine.py  faster_whisper_engine.py  formatter.py  installer.py  mlx_whisper_engine.py
docs/superpowers/plans/: 2026-03-25-transcribe-feature.md
docs/superpowers/specs/: 2026-03-24-transcribe-feature-design.md
tests/: conftest.py  test_cli.py  test_downloaders.py  test_transcribe_batch.py  test_transcribe_engine.py  test_transcribe_formatter.py  test_transcribe_installer.py
