[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casts_down"
version = "2.1.8"
description = "Cross-platform CLI for downloading and transcribing podcasts with local Whisper speech-to-text"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Casts Down Contributors"}
]
keywords = [
    "podcast", "downloader", "cli", "transcribe", "speech-to-text",
    "whisper", "srt", "subtitle", "apple-podcasts", "xiaoyuzhou", "rss",
    "faster-whisper", "mlx-whisper", "audio", "asr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Environment :: Console",
]

dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "click>=8.1.0",
    "feedparser>=6.0.10",
    "tqdm>=4.65.0",
    "faster-whisper>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
metal = ["mlx-whisper>=0.4.0,<1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/clemente0731/casts_down"
Repository = "https://github.com/clemente0731/casts_down"
Issues = "https://github.com/clemente0731/casts_down/issues"

[project.scripts]
casts-down = "casts_down.cli:main"

[tool.setuptools.packages.find]
include = ["casts_down*"]
